<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCambiarPersonajeJugador1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_personaje_osiris"
        android:textColor="#FFFFFF"
        android:background="@color/red"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/listView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCambiarPersonajeJugador2"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnCambiarPersonajeJugador2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/pink"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/cambiar_personaje_narasayumi"
        android:textColor="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCambiarPersonajeJugador1"
        app:layout_constraintTop_toBottomOf="@id/listView" />

    <Button
        android:id="@+id/btnCambiarPersonajeJugador3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_personaje_tanakillo"
        android:textColor="#FFFFFF"
        android:background="@color/green"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnCambiarPersonajeJugador1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCambiarPersonajeJugador4"
        android:layout_marginTop="16dp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnCambiarPersonajeJugador4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_personaje_dar_o"
        android:textColor="#FFFFFF"
        android:background="@color/blue"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnCambiarPersonajeJugador2"
        app:layout_constraintStart_toEndOf="@+id/btnCambiarPersonajeJugador3"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnGanador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_ganador"
        app:layout_constraintTop_toBottomOf="@id/textTiempoRestanteJugador4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:visibility="visible"/>

    <Button
        android:id="@+id/btnVerVictorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_victorias"
        app:layout_constraintTop_toBottomOf="@id/btnGanador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/textTiempoRestanteJugador1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#000000"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnCambiarPersonajeJugador3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textTiempoRestanteJugador2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#000000"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/textTiempoRestanteJugador1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textTiempoRestanteJugador3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#000000"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/textTiempoRestanteJugador2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textTiempoRestanteJugador4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#000000"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/textTiempoRestanteJugador3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>